--- a/public/index.css
+++ b/public/index.css
@@ -8,7 +8,7 @@ a{
     color:white;
 }
 
-#menu-products{
+.menu-products{
   width: 180px;
   font-size: 14px;
 }
@@ -32,7 +32,7 @@ a{
   position: absolute;
   top: 10px;
   left: 10px;
-  z-index: 9999;
+  z-index: 1030;
   min-height: 70px;
   min-width: 70px;
   border-radius:50%;
@@ -86,18 +86,14 @@ box-shadow:10px 10px 30px lightgray;
 blur:(1px);
 }
 
-.cp1{
-color:#e5423d;
-font-family: 'Rubik', sans-serif;
-}
-
-.cp2{
+.title-page-text{
 color:white;
-font-family: 'Rubik', sans-serif;
-font-size: 3em
+font-family: 'Audiowide', cursive;
+font-size: 40px;
+color:white
 }
 
-.cp1-prod{
+/* .cp1-prod{
   color:#e5423d;
   text-shadow: 2px 2px 7px #ffffff;
   font-size: 40px;
@@ -106,8 +102,15 @@ font-size: 3em
 .cp2-prod{
   color:rgb(235, 236, 236);
   font-size: 30px;
+} */
+.lead{
+  font-family: 'Audiowide', cursive;
+
 }
 
+.card-text{
+  color:black
+}
 
 .linha{
   width: 100%;
@@ -115,7 +118,6 @@ font-size: 3em
 }
 .cards:hover{
   background-color: rgb(19, 75, 242);
-  color: white;
   margin-top: 5px;
   opacity: 0.9;
 }
@@ -216,10 +218,6 @@ font-size: 3em
   justify-content: center;
 }
 
-#title-modal-small-screen{
-  display: none;
-}
-
 #error-nome , #error-fone ,#error-mail , #error-msg{
   display: none;
   border: 1px solid red;
@@ -255,14 +253,6 @@ font-size: 3em
     width: 10px;
     top: 0px;
   }
-
-#title-modal-small-screen{
-  display: block;
-}
-
-#logo-modal{
-  display: none;
-}
 
   .cp1{
     font-size: 50px;
