--- a/views/contactError.handlebars
+++ b/views/contactError.handlebars
@@ -10,6 +10,7 @@
     Nossa equipe trabalha para promover a excelência no atendimento.">
   <meta name="keywords" content="Ajepel,Embalagens,embalagens,sacolas,pacotes,tijucas,queimados,florianopolis">
   <!-- Bootstrap CSS -->
+  <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" href="index.css">
@@ -51,7 +52,7 @@
 
   <div class="jumbotron jumbotron-fluid bg-dark text-white border-custom" id="contato-page">
     <div class="container">
-      <h1 class="display-4 font-weight-bold cp2"><span class="display-1 font-weight-bold cp1">C</span>ontato</h1>
+      <h1 class="display-4 title-page-text">Contato</h1>
       <hr class="linha">
       <div class="jumbotron jumbotron-fluid bg-dark text-white" id="contato-page">
           <div class="alert alert-danger" role="alert">
