Implementing products section

--- a/public/index.css
+++ b/public/index.css
@@ -19,6 +19,15 @@ a{
   /* border:1px solid red; */
 }
 
+
+.img-thumbnail{
+  width: 180px;
+  border-radius: 10px;
+  /* border:1px solid red; */
+}
+
+
+
 .card:hover{
   opacity: 0.9;
   /* border:1px solid gray; */
