--- a/public/index.css
+++ b/public/index.css
@@ -19,10 +19,17 @@ a{
   /* border:1px solid red; */
 }
 
+.card{
+  height: 320px;
+}
+
+
 
 .img-thumbnail{
-  width: 180px;
+  width: 200px;
+  min-height: 160px;
   border-radius: 10px;
+  overflow: hidden;
   /* border:1px solid red; */
 }
 
@@ -125,6 +132,7 @@ color:white
   /* Checar  */
   min-height: 60px;
   max-height: 80px;
+  font-family: 'Poppins', sans-serif;
 }
 
 .linha{
