--- a/public/index.css
+++ b/public/index.css
@@ -1,36 +1,34 @@
-body{
+body {
   background-color: #343a40;
 }
 
-.siga-nos-bar{
+.siga-nos-bar {
   background-color: #1c1f64;
-  color:white;
-  border-top:0.5px solid white;
-  border-bottom:0.5px solid white;
+  color: white;
+  border-top: 0.5px solid white;
+  border-bottom: 0.5px solid white;
 }
 
-a{
-    color:white;
+a {
+  color: white;
 }
 
-.menu-products{
+.menu-products {
   width: 180px;
   font-size: 14px;
 }
 
-.products{
+.products {
   width: 180px;
   border-radius: 10px;
   /* border:1px solid red; */
 }
 
-.card{
+.card {
   height: 320px;
 }
 
-
-
-.img-thumbnail{
+.img-thumbnail {
   width: 200px;
   min-height: 160px;
   border-radius: 10px;
@@ -38,16 +36,14 @@ a{
   /* border:1px solid red; */
 }
 
-
-
-.card:hover{
+.card:hover {
   opacity: 0.9;
   /* border:1px solid gray; */
 }
 
-.logo{
+.logo {
   background-image: url('images/logo-edit.jpg');
-  background-size:contain;
+  background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
   position: absolute;
@@ -56,41 +52,42 @@ a{
   z-index: 1030;
   height: 100px;
   width: 100px;
-  border-radius:50%;
+  border-radius: 50%;
   background-color: white;
   border: 2px solid white;
-  border-radius:50%;
+  border-radius: 50%;
 }
-#logo-modal{
+
+#logo-modal {
   height: 80px;
   width: 80px;
   top: 3px;
 }
 
-.menu-box-container{
+.menu-box-container {
   height: 300px;
-  width:100%;
-  background-color:lightblue;
+  width: 100%;
+  background-color: lightblue;
 }
 
-.d-block{
-height: 550px;
+.d-block {
+  height: 550px;
 }
 
-.item-info{
+.item-info {
   height: 250px;
 }
 
-.info-container{
+.info-container {
   background-color: rgba(168, 168, 168, 1);
   width: auto;
 }
 
-.card-img{
-height: 150px;
+.card-img {
+  height: 150px;
 }
 
-.sobre-img{
+.sobre-img {
   float: right;
   height: 200px;
   padding: 20px;
@@ -99,22 +96,22 @@ height: 150px;
   border-radius: 7px;
 }
 
-.products-img{
-height: 120px;
-width: 120px;
-margin: 10px;
-border-radius: 50%;
-opacity: 0.9;
-border:5px solid #fafafa;
-box-shadow:10px 10px 30px lightgray;
-blur:(1px);
+.products-img {
+  height: 120px;
+  width: 120px;
+  margin: 10px;
+  border-radius: 50%;
+  opacity: 0.9;
+  border: 5px solid #fafafa;
+  box-shadow: 10px 10px 30px lightgray;
+  blur: (1px);
 }
 
-.title-page-text{
-color:white;
-font-family: 'Audiowide', cursive;
-font-size: 40px;
-color:white
+.title-page-text {
+  color: white;
+  font-family: 'Audiowide', cursive;
+  font-size: 40px;
+  color: white
 }
 
 /* .cp1-prod{
@@ -127,81 +124,79 @@ color:white
   color:rgb(235, 236, 236);
   font-size: 30px;
 } */
-.lead{
+.lead {
   font-family: 'Audiowide', cursive;
-
 }
 
-.card-text{
-  color:black;
+.card-text {
+  color: black;
   /* Checar  */
   min-height: 60px;
   max-height: 80px;
   font-family: 'Poppins', sans-serif;
 }
 
-.linha{
+.linha {
   width: 100%;
   border: 0.5px solid red;
 }
-.cards:hover{
+
+.cards:hover {
   background-color: rgb(19, 75, 242);
   margin-top: 5px;
   opacity: 0.9;
 }
 
-.clearfix{
-  height:10vh;
+.clearfix {
+  height: 10vh;
   width: auto;
   /* background-color: blue; */
 }
 
-.banner-container{
+.banner-container {
   background-image: url('images/banner.jpeg');
   height: 1000px;
   width: 100%;
 }
 
-.border-custom{
-  border-top:1px solid white;
+.border-custom {
+  border-top: 1px solid white;
 }
 
-#icon{
+#icon {
   /* font-size: 30px; */
 }
 
-.nav-item{
+.nav-item {
   font-family: 'Audiowide', cursive;
-
 }
 
-.nav-link{
+.nav-link {
   float: right;
   font-size: 17px;
   border-bottom: 2px solid transparent;
 }
 
-.nav-link:hover{
+.nav-link:hover {
   border-bottom: 2px solid white;
 }
 
-.nav-item:hover{
-}
+.nav-item:hover {}
 
-.fb-ic , .ins-ic , .wp-ic{
+.fb-ic, .ins-ic, .wp-ic {
   text-decoration: none;
   font-style: normal;
   color: white;
 }
 
-.social-box{
+.social-box {
   margin: 5px;
   width: 150px;
   border: 1px solid white;
   border-radius: 5px;
 }
 
-.social-box:hover{
+.social-box:hover {
   background-color: white;
   opacity: 0.8;
   color: red;
@@ -216,38 +211,34 @@ color:white
   width: 170px;
   margin: 5px;
 } */
-
-.footer-copyright-small{
+.footer-copyright-small {
   display: none;
 }
 
-#footer-links{
+#footer-links {
   text-decoration: none;
 }
 
-#footer-links:hover{
+#footer-links:hover {
   color: white;
-  text-decoration:underline;
+  text-decoration: underline;
 }
 
-#footer-wp-icon:hover{
+#footer-wp-icon:hover {
   color: lightblue;
 }
 
-#modal-links,#modal-wp-icon{
+#modal-links, #modal-wp-icon {
   text-decoration: none;
-  color:white;
+  color: white;
 }
 
-
-
-
-.disab{
+.disab {
   opacity: 0.5;
   background-color: gray;
 }
 
-#links-contato:hover{
+#links-contato:hover {
   width: 30%;
   border-bottom: 1px solid white;
   text-decoration: none;
@@ -255,125 +246,129 @@ color:white
   justify-content: center;
 }
 
-#error-nome , #error-fone ,#error-mail , #error-msg{
+#error-nome, #error-fone, #error-mail, #error-msg {
   display: none;
   border: 1px solid red;
   border-radius: 5px;
   text-align: center;
-  animation:alertt 2s infinite ease;
-
+  animation: alertt 2s infinite ease;
 }
 
 @keyframes alertt {
+
   /* 0%{
     border: 1px solid red;
   } */
-  20%{
+  20% {
     border: 1px solid white;
   }
-  40%{
+
+  40% {
     border: 1px solid red;
   }
-  60%{
+
+  60% {
     border: 1px solid white;
   }
-  80%{
+
+  80% {
     border: 1px solid red;
   }
-  100%{
+
+  100% {
     border: 1px solid white;
   }
 }
+
 @media (max-width: 575.98px) {
-  .logo{
-    height: 70px;
-    width: 70px;
-    top: 3px;
-  }
-  #logo-modal{
+  .logo {
     height: 70px;
     width: 70px;
     top: 3px;
   }
 
-.title-page-text{
-  font-size: 20px;
-}
-
-.sobre-text{
-  font-size: 15px;
-}
-
-.produtos-text-phrase{
-  font-size: 15px;
-
-}
-  .cp1{
-    font-size: 50px;
+  #logo-modal {
+    height: 70px;
+    width: 70px;
+    top: 3px;
   }
 
-  .cp2{
-    font-size: 40px;
+  .title-page-text {
+    font-size: 20px;
   }
 
-
-  #contato-alt{
-  font-size: 20px;
-  }
-
-  #contato-alt-text{
+  .sobre-text {
     font-size: 15px;
   }
 
+  .produtos-text-phrase {
+    font-size: 15px;
+  }
 
-  .carousel-item{
+  .cp1 {
+    font-size: 50px;
+  }
+
+  .cp2 {
+    font-size: 40px;
+  }
+
+  #contato-alt {
+    font-size: 20px;
+  }
+
+  #contato-alt-text {
+    font-size: 15px;
+  }
+
+  .carousel-item {
     height: 45vh;
   }
 
-  .menu-products{
+  .menu-products {
     width: 140px;
     font-size: 12px;
   }
 
-  .category-product{
+  .category-product {
     font-size: 18px;
   }
 
-  .card{
+  .card {
     width: 80%;
   }
 
-  .card-text{
+  .card-text {
     font-size: 13px;
   }
 
-  .d-block{
+  .d-block {
     height: 100%;
   }
 
-  .siga-text{
+  .siga-text {
     font-size: 15px;
   }
 
-  .fa-2x{
+  .fa-2x {
     font-size: 25px;
   }
-  a{
+
+  a {
     color: white;
   }
 
-  .footer-copyright{
+  .footer-copyright {
     display: none;
   }
-  .footer-copyright-small{
-    display:block;
-  }
 
+  .footer-copyright-small {
+    display: block;
+  }
 }
 
-
-@media (max-width: 800px){
-  .sobre-img{
+@media (max-width: 800px) {
+  .sobre-img {
     /* float: none; */
     height: 120px;
     width: 120px;
